# svd2rust_test

./: Cargo.toml  build.rs  test.svd
generated23/: Cargo.toml
generated23/src/: lib.rs
generated24/: Cargo.toml
generated24/src/: lib.rs
src/: main.rs
